New program Afro English Class

--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -13,7 +13,6 @@
 </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
   <meta property="og:image" content="  https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1679828347/Screen_Shot_2023-03-26_at_10.56.26_lwxn4z.png"/>
   <!-- Bootstrap Css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
@@ -81,7 +80,7 @@
                 stroke-width="0" />
               <g fill="#1e031d" opacity="1" stroke="none" />
               <path
-                d="M54.2034 882.809L41.6267 882.809L41.0695 885.743C40.645 887.699 40.6715 889.325 41.1491 890.621C41.6267 891.918 42.635 892.566 44.1739 892.566L46.4425 892.566L46.4425 917.879L21.6472 917.879L21.6472 892.566L23.279 892.566C25.1894 892.566 26.4696 891.918 27.1197 890.621C27.7698 889.325 28.3999 887.426 29.0102 884.924L37.1691 850.399C37.7529 847.761 37.8524 845.817 37.4676 844.566C37.0829 843.315 35.9221 842.689 33.9852 842.689L33.1494 842.689L33.1494 817.376L74.0635 817.376L74.0635 842.689L73.2675 842.689C71.3041 842.689 70.13 843.349 69.7452 844.668C69.3605 845.987 69.4733 847.898 70.0835 850.399L78.2425 884.924C78.5609 886.198 78.8461 887.301 79.0982 888.233C79.3502 889.166 79.662 889.962 80.0335 890.621C80.4049 891.281 80.9024 891.77 81.526 892.088C82.1495 892.407 82.9521 892.566 83.9338 892.566L85.5656 892.566L85.5656 917.879L49.3877 917.879L49.3877 892.566L51.5767 892.566C53.089 892.566 54.1039 891.918 54.6213 890.621C55.1387 889.325 55.1852 887.699 54.7606 885.743L54.2034 882.809ZM43.6565 872.165L52.1338 872.165L48.1539 851.218L47.8355 851.218L43.6565 872.165Z"
+                d="M54.2034 882.809L41.6267 882.809L41.0695 885.743C40.645 887.699 40.6715 889.325 41.1491 890.621C41.6267 891.918 42.https://www.saleshacker.com/wp-content/uploads/2021/02/RFP-opportunities-2048x1307.jpg566C25.1894 892.566 26.4696 891.918 27.1197 890.621C27.7698 889.325 28.3999 887.426 29.0102 884.924L37.1691 850.399C37.7529 847.761 37.8524 845.817 37.4676 844.566C37.0829 843.315 35.9221 842.689 33.9852 842.689L33.1494 842.689L33.1494 817.376L74.0635 817.376L74.0635 842.689L73.2675 842.689C71.3041 842.689 70.13 843.349 69.7452 844.668C69.3605 845.987 69.4733 847.898 70.0835 850.399L78.2425 884.924C78.5609 886.198 78.8461 887.301 79.0982 888.233C79.3502 889.166 79.662 889.962 80.0335 890.621C80.4049 891.281 80.9024 891.77 81.526 892.088C82.1495 892.407 82.9521 892.566 83.9338 892.566L85.5656 892.566L85.5656 917.879L49.3877 917.879L49.3877 892.566L51.5767 892.566C53.089 892.566 54.1039 891.918 54.6213 890.621C55.1387 889.325 55.1852 887.699 54.7606 885.743L54.2034 882.809ZM43.6565 872.165L52.1338 872.165L48.1539 851.218L47.8355 851.218L43.6565 872.165Z"
                 fill="#1e031d" fill-rule="nonzero" opacity="1" stroke="none" />
               <path
                 d="M94.4808 842.689C94.0297 842.325 93.5455 841.791 93.0281 841.086C92.5107 840.381 92.0397 839.494 91.6152 838.425C91.1907 837.356 90.8258 836.128 90.5207 834.741C90.2156 833.353 90.063 831.773 90.063 829.999C90.063 826.814 90.5937 824.062 91.655 821.743C92.7163 819.423 94.1955 817.512 96.0927 816.011C97.9898 814.51 100.272 813.419 102.938 812.736C105.605 812.054 108.57 811.713 111.833 811.713C115.628 811.713 118.818 812.099 121.405 812.873C123.992 813.646 126.088 814.76 127.694 816.216C129.299 817.672 130.44 819.423 131.116 821.47C131.793 823.517 132.131 825.791 132.131 828.293C132.131 829.794 131.992 831.238 131.713 832.625C131.435 834.013 130.971 835.275 130.32 836.412C129.67 837.549 128.815 838.459 127.753 839.141C126.692 839.824 125.405 840.165 123.893 840.165C121.133 840.165 119.097 839.05 117.784 836.822C116.47 834.593 115.813 831.841 115.813 828.566C115.813 826.701 116.112 825.143 116.709 823.892C117.306 822.641 117.963 821.788 118.679 821.333L118.201 820.787C116.769 820.787 115.608 821.106 114.719 821.743C113.83 822.379 113.14 823.141 112.649 824.028C112.158 824.915 111.833 825.916 111.674 827.031C111.515 828.145 111.435 829.225 111.435 830.271C111.435 831.773 111.608 833.262 111.953 834.741C112.298 836.219 112.882 837.538 113.704 838.698C114.527 839.858 115.614 840.813 116.968 841.564C118.321 842.314 120.006 842.689 122.022 842.689L126.44 842.689L126.44 868.003L117.445 868.003L117.445 885.197C117.445 888.245 117.883 890.235 118.759 891.167C119.634 892.1 120.749 892.566 122.102 892.566L124.808 892.566L124.808 917.879L89.665 917.879L89.665 892.566L91.2172 892.566C92.6235 892.566 93.6649 891.804 94.3415 890.28C95.0181 888.756 95.3564 887.107 95.3564 885.333L95.3564 868.003L88.0332 868.003L88.0332 842.689L94.4808 842.689Z"
@@ -218,7 +217,7 @@
     <div class="content">
       <div class="banner-heading">
         <h1 class="afrohk-title"><span class="afro-title">Afro Language Lab </h1>
-        <h3 class="slogan">Apprenez l'Anglais Autrement</h3>
+        <h3 class="slogan">Apprenez la Langue Autrement</h3>
         <p style="text-align: start;"><a href="#apropos" class="more-btn">En Savoir Plus</a></p>
       </div>
     </div>
@@ -254,7 +253,7 @@
           </div>
         </div>
         <div class="col-lg-8 py-5">
-          <div id="tv-container">
+          <div id="tv-container" data-aos="fade-up" data-aos-duration="500">
             <div id="monitor">
               <div class="afrohk-TV">
                 <h3 class="text-center afrohk-text mb-2 py-0">
@@ -275,22 +274,42 @@
     <!--Programmes section-->
     <div class="program-section-wrapper" data-aos="fade-up" data-aos-easing="linear">
       <div class="section-title  container">
-        <h2>Nos Programmes</h2>
-        <p>Anglais pour tous</p>
+        <h2>Nos Programmes </h2>
+        <p>Afro English</p>
       </div>
       <div class="container">
         <div class="row">
-          <!-- Personal English Coaching Program -->
-          <div class="col-lg-6 mt-5 mb-2">
+          <!-- Afro English -->
+          <div class="col-lg-4 mt-5 mb-2">
             <div class="d-flex mb-2 my-card-wrapper justify-content-center flex-column">
               <div class="my-card">
                 <div class="img-wrapper m-2">
                   <img class="program-image"
-                    src="https://4953540.fs1.hubspotusercontent-na1.net/hubfs/4953540/7-benefits-of-executive-coaching.webp"
+                    src="https://res.cloudinary.com/dccibzcxp/image/upload/v1707050533/Afro%20Language%20lab/AEC_rh7y3i.jpg"
+                    alt="aec-img" />
+                </div>
+                <div class="card-body d-flex flex-column align-items-start ms-3">
+                  <h3 class="program-name">Afro English Class</h3>
+                  <p class="program-description">
+                    Programme de cours en Anglais, en présentiel et en ligne ou en formule mixte. Ce programme fait décoller votre Anglais en 6 mois.
+                  </p>
+                  <a href="/" class="course-btn">En Savoir Plus</a>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 mt-5 mb-2">
+            <div class="d-flex mb-2 my-card-wrapper justify-content-center flex-column">
+              <div class="my-card">
+                <div class="img-wrapper m-2">
+                  <img class="program-image"
+                    src="https://res.cloudinary.com/dccibzcxp/image/upload/v1707051091/Afro%20Language%20lab/IMG_2969_yze5mp.jpg"
                     alt="pecp-img" />
                 </div>
                 <div class="card-body d-flex flex-column align-items-start ms-3">
-                  <h3 class="program-name">Coaching en Anglais Personnalisé</h3>
+                  <h3 class="program-name">Afro English Coaching</h3>
                   <p class="program-description">
                     Programme de coaching en Anglais, personnalisé selon les besoins de l'apprenant. Il est axé sur
                     les besoins immédiats de l’apprenant. 
@@ -304,7 +323,7 @@
           </div>
 
           <!-- English  club for all-->
-          <div class="col-lg-6 mt-5 mb-2">
+          <div class="col-lg-4 mt-5 mb-2">
             <div class="d-flex mb-2 my-card-wrapper justify-content-center flex-column">
               <div class="my-card">
                 <div class="img-wrapper m-2">
@@ -313,7 +332,7 @@
                     alt="English at work" />
                 </div>
                 <div class="card-body d-flex flex-column align-items-start ms-3">
-                  <h3 class="program-name">Club de Conversation Naturelle</h3>
+                  <h3 class="program-name">Afro English Club</h3>
                   <p class="program-description">
                     Un programme pratique et efficace pour l'amélioration continue du niveau d'Anglais des professionnels dans des clubs de conversation.
                   </p>
@@ -365,7 +384,7 @@
       </div>
       <div class="col-md-8" data-aos="fade-up" data-aos-easing="linear">
         <div>
-          <img src="https://i.ibb.co/7WPSg5q/ads-1.png" class="img-fluid" alt="accessible" />
+          <img src="/assets/img/all-mockup.png" class="img-fluid" alt="accessible" />
         </div>
       </div>
     </div>
