--- a/public/stylesheets/landingpage.css
+++ b/public/stylesheets/landingpage.css
@@ -1,4 +1,3 @@
-
 * {
   border: 0;
   box-sizing: border-box;
@@ -406,7 +405,7 @@ nav {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: url('https://www.saleshacker.com/wp-content/uploads/2021/02/RFP-opportunities-2048x1307.jpg') no-repeat center center/cover;
+  background: url('https://res.cloudinary.com/dccibzcxp/image/upload/v1696889990/Afro%20Language%20lab/IMG_8317_dbrosj.jpg') no-repeat center center/cover;
 
 }
 
@@ -427,7 +426,7 @@ nav {
   width: 100%;
   top: 0;
   left: 0;
-  background: rgba(33, 4, 46, 0.606);
+  background: rgba(33, 4, 46, 0.406);
 
   position: absolute;
 }
@@ -1170,7 +1169,8 @@ nav {
 }
 
 .my-card-wrapper {
-  margin: 0 2rem;
+  margin: 0 1rem;
+  border: 1px solid rgba(12, 1, 27, 0.175);
 }
 
 .my-card {
@@ -1192,7 +1192,7 @@ nav {
 }
 
 .program-image {
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 
@@ -1203,7 +1203,6 @@ nav {
 
 .program-name {
   font-family: "Chivo", sans-serif;
-
   font-weight: 700;
   font-size: 1.5rem;
   color: #420786;
@@ -1225,8 +1224,8 @@ nav {
   margin: 1.3rem 0;
   font-size: 1.2rem;
   color: rgba(32, 32, 32, 0.781);
-  line-height: 3rem;
-  height: 8rem;
+  /* line-height: 2.5rem; */
+  /* height: 10rem; */
 }
 
 .my-card:hover .program-name {
@@ -1381,7 +1380,6 @@ nav {
   /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #e2e2e2e6, #c9d6ffe7);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
 
   max-width: 1000px;
   min-height: 32rem;
@@ -2436,9 +2434,11 @@ ul {
 
 
     .program-description {
-      /* line-height: 3rem; */
-      height: 10rem;
+      font-size: 1.2em;
+      font-weight: 400;
+      height: auto;
     }
+
 
     .news-img {
       height: auto;
@@ -2524,6 +2524,8 @@ ul {
       background-color: whitesmoke;
       margin-bottom: 1rem;
     }
+
+    
 
     .study {
       font-size: 2.5rem;
@@ -2762,8 +2764,6 @@ ul {
     .header-text {
       font-size: 2rem;
     }
-
-    .account-wrapper {}
 
     #sky-wrapper {
       position: relative;
@@ -3124,3 +3124,4 @@ ul {
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
   }
+}
