--- a/public/stylesheets/user/userprofile.css
+++ b/public/stylesheets/user/userprofile.css
@@ -58,7 +58,7 @@ body {
     font-family: 'Paytone One', sans-serif;
     padding: 1rem 3rem 0 0;
     font-size: 1.3rem;
-    color: rgb(4, 96, 167);
+    color: rgb(43, 36, 69, 0.8);
 }
 
 .my-clubs {
@@ -89,7 +89,7 @@ body {
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     border-radius: 5px;
     padding: 0.5rem;
-    margin: 1rem 5rem 4rem;
+    margin: 1rem 2rem 4rem;
     padding: 1rem 1rem;
 }
 
@@ -142,80 +142,49 @@ body {
     width: 90vw;
 }
 
+.perf-box-wrapper{
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+    padding: 1rem 0 1rem 0;
+    margin: 1rem 0;
+}
+
 .perf-number{
-padding: 0.5rem ;
-border-radius: 50%;
-background-color: #2239e1;
-color: #ffffff;
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-font-weight: 700;
-margin-right: 1rem;
+    padding: 0.5rem ;
+    width: 1rem;
+    border-radius: 50%;
+    background-color: black;
+    border: 2px solid black;
+    color: #fff;
+    font-size: 1.3rem;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: 700;
+    margin-right: 1rem;
 }
 
 .topic-title {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 1.1rem;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
     color: rgb(255, 255, 255);
-    border-radius: 4px;
-    padding-left: 1rem;
-    padding-top: 1rem;
-    background: #6441A5;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #2a0845, #6441A5);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #2a0845, #6441A5);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    width: 90%;
-    padding: 1rem;
+    background: #16222A;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #3A6073, #16222A);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #3A6073, #16222A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding: 1rem 0.5rem 1rem 2rem;
+    font-size: 1.2rem
 }
 
-
-
-/* CSS */
-.button-87 {
-  /* margin: 10px; */
-  padding: 0.5rem 1rem;
-  text-align: center;
-  /* text-transform: uppercase; */
-  transition: 0.5s;
-  background-size: 200% auto;
-  color: white;
-  border-radius: 10px;
-  display: block;
-  border: 0px;
-  font-weight: 500;
-  box-shadow: 0px 0px 14px -7px #a819f0;
-  background-image: linear-gradient(45deg, #5699d8 0%, #3778c4  51%, #152d91  100%);
-  cursor: pointer;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.button-87:hover {
-  background-position: right center;
-  /* change the direction of the change here */
-  color: #fff;
-  text-decoration: none;
-}
-
-.button-87:active {
-  transform: scale(0.95);
-}
 
 @media (max-width: 578px) {
     .program-wrapper {
         box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
         border-radius: 5px;
-        margin: 1rem 2rem 4rem;
+        margin: 1rem 1rem 2rem;
         padding: 1rem 1rem;
     }
 
     .mal-msg{
         font-size: 1.4rem;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        padding: 3rem 5rem 0;
-        font-style: italic;
-        text-align: center;
-       }
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
+    padding: 3rem 5rem 0;
+    font-style: italic;
+    text-align: center;
+}
 }
