--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -293,7 +293,7 @@
                   <p class="program-description">
                     Programme de cours en Anglais, en présentiel et en ligne ou en formule mixte. Ce programme fait décoller votre Anglais en 6 mois.
                   </p>
-                  <a href="/" class="course-btn">En Savoir Plus</a>
+                  <a href="/englishlang4everyone" class="course-btn">En Savoir Plus</a>
 
                 </div>
               </div>
@@ -305,7 +305,7 @@
               <div class="my-card">
                 <div class="img-wrapper m-2">
                   <img class="program-image"
-                    src="https://res.cloudinary.com/dccibzcxp/image/upload/v1707051091/Afro%20Language%20lab/IMG_2969_yze5mp.jpg"
+                    src="https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1681981446/Afro%20Language%20Lab/Club%20Photos/80993daa-04e8-4364-81a1-186a7f500c0a_ecst0y.jpg"
                     alt="pecp-img" />
                 </div>
                 <div class="card-body d-flex flex-column align-items-start ms-3">
@@ -523,18 +523,14 @@
       <div class="swiper-wrapper align-items-center py-5">
         <!-- Slides -->
         <div class="swiper-slide">
-          <img src="" class="img-fluid" alt="" />
-        </div>
-        <div class="swiper-slide">
           <img src="https://i.ibb.co/tPqrN2Q/CAGE-FISCOM.jpg" alt="CAGE-FISCOM">
         </div>
-
       </div>
       <!-- pagination -->
       <div class="swiper-pagination py-2"></div>
     </div>
   </main>
-  
+
   <%-include('./partials/footer')%>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
