--- a/views/courses/course_modules/showModule.ejs
+++ b/views/courses/course_modules/showModule.ejs
@@ -64,11 +64,11 @@
    
     <!-- Explication supplementaire-->
     <div class="my-3">
-      <div class="mb-3 mt-5">
+      <div class="">
         <p class="d-flex justify-content-around">
           <a class="btn objectives d-block" data-bs-toggle="collapse" href="#objectif" role="button" aria-expanded="false"
           aria-controls="collapseExample">
-          Cliquez pour voir les objectifs du module
+          Les objectifs du module
         </a>
           <a class="btn moreLink mx-2 btn-primary" data-bs-toggle="collapse" href="#moreEx" role="button"
             aria-expanded="false" aria-controls="collapseExample">
