--- a/views/admindashboard.ejs
+++ b/views/admindashboard.ejs
@@ -6,8 +6,11 @@
 <script>
   tinymce.init({
     selector: '.mytextarea',
-    plugins: "print link image lists advlist wordcount",
-    height: 300,
+    height: 200,
+    relative_urls: false,
+    remove_script_host: false,
+    toolbar: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image",
+    plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount',
     max_width: 500,
     min_height: 300,
     min_width: 400
