--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -3,17 +3,20 @@
 
 <head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6E9J2N9N5H"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6E9J2N9N5H"></script>
+  <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
 
-  gtag('config', 'G-6E9J2N9N5H');
-</script>
+   gtag('config', 'G-6E9J2N9N5H');
+  </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:image" content="  https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1679828347/Screen_Shot_2023-03-26_at_10.56.26_lwxn4z.png"/>
+  <meta property="og:image"
+    content="https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1687739188/Logo_suplamar_huaagx.jpghttps://res.cloudinary.com/dccibzcxp/image/upload/v1709695363/ALL_TB_y3mrzx.png"
+  />
+
   <!-- Bootstrap Css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
