--- a/views/layouts/courseBoilerplate.ejs
+++ b/views/layouts/courseBoilerplate.ejs
@@ -12,6 +12,11 @@
 </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:image"
+    content="https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1687739188/Logo_suplamar_huaagx.jpghttps://res.cloudinary.com/dccibzcxp/image/upload/v1709695363/ALL_TB_y3mrzx.png"
+  />
+
+
     <!-- Bootstrap Css -->
     <link
       rel="stylesheet"
