--- a/views/layouts/engClubBoilerplate.ejs
+++ b/views/layouts/engClubBoilerplate.ejs
@@ -13,6 +13,11 @@
 </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:image"
+    content="https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1687739188/Logo_suplamar_huaagx.jpghttps://res.cloudinary.com/dccibzcxp/image/upload/v1709695363/ALL_TB_y3mrzx.png"
+  />
+
+
   <!-- Bootstrap Css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
