--- a/views/instructor.ejs
+++ b/views/instructor.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/boilerplate') %>
     <h1>Welcome to Instructor Dashboard</h1>
     <div>
-        <a href="/courses/new">Create a new course</a>
+        <a href="/courses/new">Create a new course for students</a>
     </div>
