logo image in links 1

--- a/views/layouts/pecpBoilerplate.ejs
+++ b/views/layouts/pecpBoilerplate.ejs
@@ -28,7 +28,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chivo:wght@400;700;900&family=Poppins:wght@600;700;800;900&display=swap"
         rel="stylesheet" />
-        
+        <meta property="og:image"
+    content="https://res.cloudinary.com/dccibzcxp/image/upload/v1709695363/ALL_TB_y3mrzx.png"
+  />
     <title>CAP</title>
 </head>
 
