--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -16,6 +16,7 @@
   <meta property="og:image"
     content="https://res.cloudinary.com/dccibzcxp/image/upload/v1709695363/ALL_TB_y3mrzx.png"
   />
+  <meta content="Centre moderne de formation en langues et en leadership" name="description">
 
   <!-- Bootstrap Css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
